src/objects/PDF_Usage_Statistics__x.object
<CustomObject>
    <description>PDF_Usage_Statistics</description>
    <externalDataSource>Heroku_Postgres</externalDataSource>
    <externalName>uat$PDF_Usage_Statistics</externalName>
    <fields>
        <fullName>date_type__c</fullName>
        <description>date_type</description>
        <externalDeveloperName>date_type</externalDeveloperName>
        <label>date_type</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>download__c</fullName>
        <description>download</description>
        <externalDeveloperName>download</externalDeveloperName>
        <label>download</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <description>id</description>
        <externalDeveloperName>id</externalDeveloperName>
        <label>id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>print__c</fullName>
        <description>print</description>
        <externalDeveloperName>print</externalDeveloperName>
        <label>print</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>usage_date__c</fullName>
        <description>usage_date</description>
        <externalDeveloperName>usage_date</externalDeveloperName>
        <label>usage_date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>view__c</fullName>
        <description>view</description>
        <externalDeveloperName>view</externalDeveloperName>
        <label>view</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>PDF_Usage_Statistics</label>
    <pluralLabel>PDF_Usage_Statistics</pluralLabel>
</CustomObject>